--- a/views/add.pug
+++ b/views/add.pug
@@ -9,5 +9,5 @@ block content
       label(for='name') Title: 
       input(type='text', id='title', name='title', required) 
       label(for='description') Description: 
-      input(type='text', id='description', name='description', required) 
+      input(type='text', id='description', name='description') 
       button(type='submit') Submit
