--- a/public/css/style.css
+++ b/public/css/style.css
@@ -174,3 +174,22 @@ button[type="submit"]:hover {
   text-decoration: line-through;
   color: #333;
 }
+
+.bg-footer {
+  position: absolute;
+  top: 30px;
+  left: 20px;
+  margin: auto;
+  width: 100%;
+}
+
+.bg {
+  height: 100vh;
+  z-index: -1;
+}
+
+.bg img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
